fixed hardcoded alignment

--- a/HW1-sol/css/style.css
+++ b/HW1-sol/css/style.css
@@ -41,6 +41,9 @@ hr {
     float: center;
     border: 4px solid #000;
     display: block;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
     width: 300px;
@@ -51,7 +54,7 @@ hr {
     font-weight: normal;
     font-family: sans-serif;
     margin-top: 20px;
-    margin-left: 565px;
+    text-align: center;
 }
 
 .main-product {
@@ -130,13 +133,15 @@ hr {
 }
 
 .checkout {
-    text-align: center;
     border: 3px solid #000;
     display: inline-block;
     font-size: 25px;
     font-family: sans-serif;
     font-weight: normal;
-    margin-left: 665px;
+    margin-left: 46%;
+    margin-right: 50%;
+    text-align: center;
+    justify-items: center;
 }
 
 a:hover {
